# rife-gameplay-interpolation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/output/: blind_test_answer.txt
docs/: API.md  USAGE.md
docs/research/: artifact_taxonomy.md  literature_review.md  methodology.md
results/: experiment_summary.md
results/metrics/: arc_raiders_metrics.csv
scripts/: calculate_metrics.py  download_models.py  generate_test_video.py  run_demo.sh  run_experiment.py
src/: __init__.py  benchmark.py  cli.py  interpolate.py  metrics.py
src/core/: benchmark.py  extractor.py  interpolator.py  metrics.py
src/utils/: config.py  logger.py  setup.py
tests/: test_cli.py  test_core.py  test_integration.py
